--- a/Atividade 3/style.css
+++ b/Atividade 3/style.css
@@ -156,6 +156,15 @@ body {
     border-bottom: 0.5px solid #ddd ;
     
 }
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+    font-size: 0.6rem;
+    color: #fff;
+}
 /* Mobile */
 
 
