Arrumando margem da ul no mobile

--- a/Atividade 3/style.css
+++ b/Atividade 3/style.css
@@ -177,5 +177,10 @@ footer {
         margin: 0.2rem 0.5rem;
      }
 
+     #main-article .post .text ul {
+        font-size: 0.8rem;
+        text-align: justify;
+        margin: 0.2rem 1rem;
+    }
      
 }
