--- a/Atividade 3/style.css
+++ b/Atividade 3/style.css
@@ -1,192 +1,449 @@
-/* Cores */ 
-:root {
-    --contorno: hsl(279, 21%, 52%);
-    --main: hsl(222, 28%, 75%);
-}
-
-/* utilidade */ 
-h1,h2{
-    font-family: 'Julius Sans One', sans-serif;
-}
-
-*::selection{
-    color: #fff;
-    background-color: var(--main);
-}
-
 * {
     margin: 0;
     padding: 0;
-}
-body {
-    background: radial-gradient(var(--contorno), hsl(279, 21%, 40%));
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: 'Open sans', sans-serif;
-}
-
-#mainHeader {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 2rem;
-    background-color: #fff;
-     
-}
-
-#mainHeader h1 {
-    margin: 1rem 0 0.2rem;
-    color: var(--main);
-    font-family: 'Julius Sans One', sans-serif;
-}
-
-#mainHeader p {
-    color: var(--contorno);
-    
-    font-size: 1rem;
-    font-weight: 400;
-}
-
-#main-article {
-    background-color: transparent;
-    padding: 0.5rem;
-
     
 }
 
-#main-article .post {
-    background-color: #fff;
-    margin: 1.5rem 2rem;
-    border-radius: 4px;
-    padding: 2rem;
-}
-
-#main-article .post .title {
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 0.4rem;
-    border-bottom: 0.5px solid #ddd ;
-    margin-bottom: 0.5rem;
-}
-
-#main-article .post .title h2 {
-    color: var(--contorno);
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
-#main-article .post .title span {
-    font-size: 0.7rem;
-    color: var(--main);
-    padding-top: 0.3rem;
-}
-
-#main-article .post .title span a{
-    background-color: var(--main);
-    color: #fff;
+a {
     text-decoration: none;
-    padding: 0 0.5rem;
-    border-radius: 30px;
-    transition: 0.5s;
 }
 
-#main-article .post .title span a:hover {
+
+body {
+    background-color: #191516;
+}
+html {
+    scroll-behavior: smooth;
+  }
+
+nav {
+    position: fixed;
+    font-family: 'Poppins';
+    display: flex;
+    width: 100%;
+    z-index: 2;
+   justify-content: flex-end;
+   
+
+}
+
+nav a {
+    margin: 1rem;
+    text-decoration: none;
+    color: #F3F2ED;
+    display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
  
-    background-color: hsl(222, 28%, 50%) ;
+  position: relative;
 }
 
-#main-article .post .text  {
-    color: #333;
+nav a:hover {
+    margin: 1rem;
+    text-decoration: none;
+    color: #F3F2ED;
+    
+}
+nav .top {
+    background: transparent;
+}
+nav a:before {
+    content: "";
+  position: absolute;
+  z-index: -1;
+  left: 51%;
+  right: 51%;
+  top: 100%;
+  background: #A9D1C9;
+  height: 4px;
+  -webkit-transition-property: left, right;
+  transition-property: left, right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+
+.active::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    right: 0;
+    top: 100%;
+    background: #de2826;
+    height: 4px;
+    -webkit-transition-property: left, right;
+    transition-property: left, right;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+}
+
+nav a:hover:before, nav a:focus:before, nav a:active:before {
+    left: 0;
+    right: 0;
+  }
+  
+    
+
+
+main {
+    background-color: #191516;
+    color: #F3F2ED;
+    height: 100vh;
+    font-family: 'Poppins';
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    
+
+   
+}
+
+main .txt-type {
+    border-right: #F3F2ED 4px solid;
+    display: inline;
+}
+main #bolinha {
+    position: absolute;
+    background-color: #de2826;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    z-index: 1;
+    transform: translate(80%, 40%);
+    
+
+}
+
+
+main #bolinha-2 {
+    position: absolute;
+    background-color: #A9D1C9;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    z-index: 1;
+    transform: translate(-400%, -110%);
+    
+
+}
+
+main #bolinha-3 {
+    position: absolute;
+    background-color: #F3F2ED;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    z-index: 1;
+    transform: translate(-400%, 250%);
     
 }
 
-#main-article .post .text h3 {
-   margin-bottom: 0.5rem;
+main #bolinha-4 {
+    position: absolute;
+    border: #F3F2ED dashed 1px;
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    z-index: 0;
+    transform: translate(400%, 50%);
+    
 }
 
-#main-article .post .text p {
+main #bolinha-5 {
+    position: absolute;
+    border: #F3F2ED dashed 1px;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    z-index: 0;
+    transform: translate(40%, 90%);
+    
+}
+
+main .text-container {
+    z-index: 33;
+    text-align: center;
+}
+
+#introdução, #Design-Responsivo {
+    background-color: #191516;
+    font-family: 'Poppins';
+    color: #fff;
+    padding: 0 10rem 5rem;
+   
+
+}
+
+#introdução h3, #Design-Responsivo h3 {
+    font-size: 2rem;
+    padding: 0 1rem;
+    display: inline-block;
+    color: #191516;
+    background-color: #A9D1C9;
+    margin: 1rem 0;
+    
+}
+
+
+#introdução p, #Design-Responsivo p {
     text-align: justify;
-    font-size: 0.8rem;
     
+
 }
 
-
-#main-article .post .text .img1  {
+.img-box {
+    width: 100%;
+    padding: 2rem;
     display: flex;
     justify-content: center;
-    
 }
-#main-article .post .text .img1 img  {
-   height: 300px;
-   width: auto;
-   
-   
-} 
 
+.card {
+    display: inline-flex;
+    background-color: #de2826;
+    justify-content: center;
+    align-items: center;
+    padding-top: 1rem;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+ }
+ 
 
-#main-article .post .text blockquote {
-    background-color: #eee;
-    font-size: 0.7rem;
-    margin: 0.2rem 5rem 0.5rem;
+ .card img {
+     
+    height: 18rem;
+    width: auto;
+    transition: 0.5s;
+    border-radius: 0 0 10px 10px;
+    
+   
+}
+
+.card img:hover {
+    
+    height: 18.5rem;
+    
+
+}
+
+.quote {
+    background-color: #F3F2ED;
+    font-size: 1rem;
+    color: #191516;
     padding: 1rem;
-    border-radius: 2px;
+    margin: 1rem;
+    border-radius: 10px;
+    border-top: #de2826 10px solid;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
 }
 
-#main-article .post .text #CSS, 
-#main-article .post .text #Conclusão,
-#main-article .post .text #Referencias {
+
+
+
+.GoDown {
+    background-color: #A9D1C9;
+    padding: 10px;
+    color: #191516;
+    border-radius: 50%;
     margin-top: 0.5rem;
+    
 }
 
-#main-article .post .text ul {
-    font-size: 0.8rem;
+
+ul, li {
     text-align: justify;
-    margin: 0.2rem 2rem;
-}
-
-#CSS-svg {
-    margin-top: 0.5rem;
     
 }
 
-#main-article .post .small{
-    font-size: 0.7rem!important;
-    padding-bottom: 1rem;
-    border-bottom: 0.5px solid #ddd ;
-    
+.red {
+    background-color: #de2826;
+    color: #F3F2ED;
+}
+
+.icon {
+    color: #F3F2ED;
+    transition: 0.5s;
+    margin: 0.5rem ;
+}
+
+.icon:hover {
+    color: #de2826;
 }
 
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2rem;
-    font-size: 0.6rem;
-    color: #fff;
+    flex-direction: column;
+    text-align: center;
+    padding: 5rem 0 0rem;
+    
+}
+
+footer p {
+    text-align: center!important;
+}
+
+.contact {
+   
+   position: fixed;
+   top: 40%;
+   left: 100%;
+   display: flex;
+   transform: translate(-40%,-40%);
+    padding: 1rem 1rem;
+   background-color: #de2826;
+    line-height: 1.3rem;
+   font-family: 'poppins';
+   font-weight: 600;
+   color: #F3F2ED;
+   align-items: center;
+   justify-content: center;
+   transition: 0.5s;
+   border-radius: 10px;
+
+  
+}
+
+.contact:hover{
+    transform: translate(-100%,-40%);
+    transition: 0.5s;
+    
 }
 
 
-/* Mobile */
+
+.contact .media .icon:hover {
+    color: #191516
+}
 
 
-@media only screen and (max-width: 600px) {
-    #main-article .post .text .img1 img  {
-        height: 10rem;
+.contact h4 {
+    text-transform: uppercase;
+    padding-right: 1rem ;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 736px) {
+    nav {
+        justify-content: center;
+        text-align: center;
        
-     } 
-     #main-article .post .text blockquote {
-        margin: 0.2rem 0.5rem;
-     }
-
-     #main-article .post .text ul {
-        font-size: 0.8rem;
-        text-align: justify;
-        margin: 0.2rem 1rem;
     }
+    nav a {
+        margin: 0.3rem;
+        font-size: 0.8rem;
+    }
+
+    nav a:hover {
+        margin: 0.3rem;
+        
+    }
+
+    main #bolinha {
+        position: absolute;
+        background-color: #de2826;
+        height: 100px;
+        width: 100px;
+        border-radius: 50%;
+        z-index: 1;
+        transform: translate(80%, -10%);
+       
+    
+    }
+    
+    
+    main #bolinha-2 {
+        display: none;
+        
+    
+    }
+    
+    main #bolinha-3 {
+        position: absolute;
+        background-color: #F3F2ED;
+        height: 30px;
+        width: 30px;
+        border-radius: 50%;
+        z-index: 1;
+        transform: translate(-400%, 250%);
+        
+    }
+    
+    main #bolinha-4 {
+       
+        display: none;
+    }
+    
+    main #bolinha-5 {
+        position: absolute;
+        border: #F3F2ED dashed 1px;
+        height: 90px;
+        width: 90px;
+        border-radius: 50%;
+        z-index: 0;
+        transform: translate(100%, 100%);
+        
+    }
+.contact {
+    display: none;
+}
+
+main .text-container {
+    margin: 1.5rem;
+}
+    
+#introdução, #Design-Responsivo {
+    padding: 2rem;
+    align-items: center;
+
+}
+
+#introdução h3, #Design-Responsivo h3 {
+    display: flex;
+    margin: 0.5rem;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+#introdução p, #Design-Responsivo p {
+   padding-top: 0.5rem ;
+}
+
+.quote {
+    text-align: center;
+    padding: 0.5rem;
+}
+
+.card img {
      
+    height: auto;
+    width: 16rem;
+    transition: 0.5s;
+    border-radius: 0 0 10px 10px;
+    
+   
+}
+
+.img-box {
+    width: 100%;
+    padding: 1rem 0rem;
+   
+    display: flex;
+    justify-content: center;
+}
+
+
+
 }
