--- a/Atividade 4/style.css
+++ b/Atividade 4/style.css
@@ -455,7 +455,7 @@ background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) 
  
  .door
  {
-    background: #111 url(./gryffyn-m-O8pEyjTnI7U-unsplash.jpg) center;
+    background:  url(./gryffyn-m-O8pEyjTnI7U-unsplash.jpg) center;
    position:absolute;
    top:0px;
    left:0px;
