--- a/Atividade 4/style.css
+++ b/Atividade 4/style.css
@@ -232,6 +232,8 @@ header {
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    touch-action: none;
+-ms-touch-action: none;
 
 }
 
